...
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/landType" />

    <Spinner
        android:id="@+id/spinnerLandType"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
...
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/land_address" />

    <Spinner
        android:id="@+id/spinnerLandAddress"
        android:layout_width="317dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
...
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/Amount" />

    <EditText
        android:id="@+id/editTextLandExtent"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="53dp"
...
        android:hint="@string/hectares"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <Spinner
        android:id="@+id/spinnerLand"
        android:layout_width="187dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="638dp"
...
