...
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="50dp" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="90dp"
...
        android:text="@string/data_entry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSuccess" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="90dp"
...
